<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventEditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black">
    </TextView>

    <EditText
        android:id="@+id/eventNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="Event name"
        tools:ignore="LabelFor">
    </EditText>

    <TextView
        android:id="@+id/eventDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:id="@+id/eventTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black">
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="@color/blue"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="saveEventAction"
        android:textSize="20sp">
    </Button>

</LinearLayout>