<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advices"
            android:textSize="35sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="center">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="35sp"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:onClick="newNote">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="35sp"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:onClick="returnToMainActivity">
        </Button>
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/noteListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:dividerHeight="3dp"
        android:divider="@color/blue">
    </ListView>

</LinearLayout>